# HikePlanner

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  runCommands.txt
.github/workflows/: actions.yml  model.yml
backend/: app.py  service.py
data/: collect-curate.py  collect.py  curate.py  download_raw_data.py  transform-validate.py  upload_raw_data.py
frontend/: .gitignore  package-lock.json
frontend/src/: app.html
frontend/src/routes/: +page.svelte
frontend/static/: styles.css
model/: model.py  publish_model.py  save.py
spider/: scrapy.cfg
spider/downloads/: mongo_import.py
spider/spider/spiders/: gethikrdata copy.py  gethikrdata.py
